init: model engines reactors